src/objects/Authorized_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Authorized_Customer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Customer Login</label>
        <referenceTo>Customer_Login__c</referenceTo>
        <relationshipLabel>Authorized Contacts</relationshipLabel>
        <relationshipName>Authorized_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up tho the Order ,the Contact is authorized to.</description>
        <label>Authorized Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Authorized_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Order_s_Customer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Order&apos;s Customer Login</label>
        <referenceTo>Customer_Login__c</referenceTo>
        <relationshipLabel>Authorized Contacts (Authorized Order&apos;s Customer Login)</relationshipLabel>
        <relationshipName>Authorized_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorized Orders / Customer Login</relationshipLabel>
        <relationshipName>Authorized_Customer_Login_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( Contact__r.HasOptedOutOfEmail , &quot;&quot; , Contact__r.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <formula>Contact__r.Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>IF( Contact__r.DoNotCall , &quot;&quot; , Contact__r.MobilePhone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF( Contact__r.DoNotCall , &quot;&quot; , Contact__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <label>Authorized Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>